Fixat overflow (lite grann), gjort olika textstycken mer särskiljbara (lättare att se länkar, lättare att se receptet), samt tagit bort en del onödig css-kod

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     color: #f2f2f2;
     padding: 10px;
     text-align: center;
+    text-decoration: underline;
 }
 
 h1 {
@@ -19,10 +20,10 @@ h1 {
 }
 
 #stretch {
-    padding-bottom: 100%;
+    padding-bottom: 80%;
 }
 
-#overflowpass {
+.overflowpass {
     overflow: hidden;
 }
 
@@ -41,17 +42,11 @@ h1 {
     margin: auto;
 }
 
-ul,
 ol {
-    padding: 0;
-    row-gap: 2vh;
-    text-align: center;
-    list-style-type: none;
+    text-align: left;
 }
 
-a,
-.recipe-steps {
-    text-decoration: none;
+a {
     color: #ffffff;
 }
 
